@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2023 Matthias Zumkeller
- * Copyright (C) 2023 University of Freiburg
+ * Copyright (C) 2025 Matthias Zumkeller
+ * Copyright (C) 2025 University of Freiburg
  *
  * This file is part of the ULTIMATE Proofs Library.
  *
@@ -26,13 +26,17 @@
  */
 package de.uni_freiburg.informatik.ultimate.lib.proofs.owickigries.empire;
 
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Set;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import de.uni_freiburg.informatik.ultimate.automata.petrinet.IPetriNet;
 import de.uni_freiburg.informatik.ultimate.automata.petrinet.Marking;
@@ -47,7 +51,7 @@ import de.uni_freiburg.informatik.ultimate.lib.modelcheckerutils.smt.predicates.
 import de.uni_freiburg.informatik.ultimate.lib.proofs.owickigries.GhostUpdate;
 import de.uni_freiburg.informatik.ultimate.lib.proofs.owickigries.IPossibleInterferences;
 import de.uni_freiburg.informatik.ultimate.lib.proofs.owickigries.OwickiGriesAnnotation;
-import de.uni_freiburg.informatik.ultimate.lib.proofs.owickigries.OwickiGriesConstruction;
+import de.uni_freiburg.informatik.ultimate.lib.proofs.owickigries.OwickiGriesUtils;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.ManagedScript;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.SmtSortUtils;
 import de.uni_freiburg.informatik.ultimate.lib.smtlibutils.SmtUtils;
@@ -56,239 +60,215 @@ import de.uni_freiburg.informatik.ultimate.logic.Script;
 import de.uni_freiburg.informatik.ultimate.logic.Term;
 import de.uni_freiburg.informatik.ultimate.logic.TermVariable;
 import de.uni_freiburg.informatik.ultimate.util.datastructures.DataStructureUtils;
+import de.uni_freiburg.informatik.ultimate.util.datastructures.relation.Pair;
 
 /**
- * Construct an Owicki-Gries-Annotation from an EmpireAnnotation.
+ * Creates an {@link OwickiGriesAnnotation} (for a Petri program) from a given empire (see {@link IEmpire}).
  *
- * @author Matthias Zumkeller (zumkellm@informatik.uni-freiburg.de)
- * @author Dominik Klumpp (klumpp@informatik.uni-freiburg.de)
- *
- * @param <LETTER>
- *            The type of places in the Petri program
- * @param <PLACE>
- *            The type of statements in the Petri program
+ * @param <S>
+ *            the types of states in the empire
+ * @param <L>
+ *            the type of actions in the proven Petri program
+ * @param <P>
+ *            the type of places in the proven Petri program
  */
-public class EmpireToOwickiGries<LETTER, PLACE> {
+public class EmpireToOwickiGries<S, L, P> {
+	private static final String GHOST = "ghost";
+
+	private static final boolean USE_STATE_INDISTINCTION = false;
+
 	private final ManagedScript mManagedScript;
 	private final Script mScript;
+	private final IPetriNet<L, P> mProgram;
+
+	private final IExplicitEmpire<L, P, S> mEmpire;
+	private final ILegalFocusFunction<S, P> mLegalFocus;
+
 	private final BasicPredicateFactory mFactory;
+	private final IProgramVar mGhostVariable;
+	private final Map<S, Term> mStateTerms;
 
-	private final IPetriNet<LETTER, PLACE> mNet;
+	private final OwickiGriesAnnotation<Transition<L, P>, P, Marking<P>> mOwickiGriesAnnotation;
 
-	private final EmpireAnnotation<PLACE> mEmpireAnnotation;
-
-	private final DefaultIcfgSymbolTable mSymbolTable;
-	private final Map<Region<PLACE>, IProgramVar> mGhostVariables;
-	private final Map<Territory<PLACE, Region<PLACE>>, IPredicate> mTerritoryFormulaMap = new HashMap<>();
-
-	private final OwickiGriesAnnotation<Transition<LETTER, PLACE>, PLACE, Marking<PLACE>> mOwickiGriesAnnotation;
-
-	/**
-	 * Constructs the Owicki-Gries-Annotation for empireAnnotation.
-	 *
-	 * @param services
-	 *            IUltimateServiceProvider object
-	 * @param mgdScript
-	 *            ManagedScript object
-	 * @param net
-	 *            Net corresponding to the Empire Annotation
-	 * @param symbolTable
-	 *            IIcfgSymbolTable object
-	 * @param procedures
-	 *            Set of string procedures
-	 * @param empireAnnotation
-	 *            Corresponding EmpireAnnotation
-	 */
 	public EmpireToOwickiGries(final IUltimateServiceProvider services, final ManagedScript mgdScript,
-			final IPetriNet<LETTER, PLACE> net, final IIcfgSymbolTable symbolTable, final Set<String> procedures,
-			final EmpireAnnotation<PLACE> empireAnnotation,
-			final IPossibleInterferences<Transition<LETTER, PLACE>, PLACE> possibleInterferences) {
-		mManagedScript = mgdScript;
-		mScript = mManagedScript.getScript();
-		mSymbolTable = new DefaultIcfgSymbolTable(symbolTable, procedures);
-		mFactory = new BasicPredicateFactory(services, mManagedScript, mSymbolTable);
-
-		mNet = net;
-		mEmpireAnnotation = empireAnnotation;
-
-		mGhostVariables = getGhostVariables();
-		final Map<PLACE, IPredicate> formulaMapping = getFormulaMap();
-		final Map<Transition<LETTER, PLACE>, GhostUpdate> assignmentMapping = getAssignmentMapping();
-		final Map<IProgramVar, Term> ghostInitAssignment = getGhostInitAssignment();
-
-		mOwickiGriesAnnotation =
-				new OwickiGriesAnnotation<>(OwickiGriesConstruction.getSpecificationForPetriNet(mNet, mFactory),
-						possibleInterferences, mSymbolTable, formulaMapping, new HashSet<>(mGhostVariables.values()),
-						ghostInitAssignment, assignmentMapping);
+			final IPetriNet<L, P> program, final IIcfgSymbolTable symbolTable, final Set<String> procedures,
+			final IExplicitEmpire<L, P, S> empire,
+			final IPossibleInterferences<Transition<L, P>, P> possibleInterferences) {
+		this(services, mgdScript, program, symbolTable, procedures, empire, possibleInterferences,
+				new ILegalFocusFunction.TrivialFocus<>(empire));
 	}
 
-	/**
-	 * @return map of regions to their corresponding ghost variables
-	 */
-	private Map<Region<PLACE>, IProgramVar> getGhostVariables() {
-		final Map<Region<PLACE>, IProgramVar> ghostVars = new HashMap<>();
-		final Collection<Region<PLACE>> regions = mEmpireAnnotation.getColony();
+	public EmpireToOwickiGries(final IUltimateServiceProvider services, final ManagedScript mgdScript,
+			final IPetriNet<L, P> program, final IIcfgSymbolTable symbolTable, final Set<String> procedures,
+			final IExplicitEmpire<L, P, S> empire,
+			final IPossibleInterferences<Transition<L, P>, P> possibleInterferences,
+			final ILegalFocusFunction<S, P> legalFocus) {
+		mProgram = program;
+		mManagedScript = mgdScript;
+		mScript = mManagedScript.getScript();
+
+		mEmpire = empire;
+		mLegalFocus = legalFocus;
+
+		mGhostVariable = createGhostVariable();
+		final var newSymbolTable = new DefaultIcfgSymbolTable(symbolTable, procedures);
+		newSymbolTable.add(mGhostVariable);
+
+		mFactory = new BasicPredicateFactory(services, mManagedScript, newSymbolTable);
+
+		final Map<S, Integer> stateIndistinction;
+		if (USE_STATE_INDISTINCTION) {
+			stateIndistinction =
+					new StateIndistinction<>(services, mProgram, mEmpire, possibleInterferences).computePartition();
+		} else {
+			final var stateList = List.copyOf(mEmpire.getStates());
+			stateIndistinction = IntStream.range(0, stateList.size()).mapToObj(i -> i)
+					.collect(Collectors.toMap(stateList::get, Function.identity()));
+		}
+		mStateTerms = getStateTerms(stateIndistinction);
+
+		final Map<P, IPredicate> placeAnnotations = computePlaceAnnotations();
+		final Map<Transition<L, P>, GhostUpdate> ghostUpdates = computeGhostUpdateMapping();
+		final Map<IProgramVar, Term> initialGhostValuation = computeInitialGhostValuation();
+
+		mOwickiGriesAnnotation = new OwickiGriesAnnotation<>(
+				OwickiGriesUtils.getSpecificationForPetriNet(mProgram, mFactory), possibleInterferences, newSymbolTable,
+				placeAnnotations, Set.of(mGhostVariable), initialGhostValuation, ghostUpdates);
+	}
+
+	private IProgramVar createGhostVariable() {
 		mManagedScript.lock(this);
 		try {
-			for (final Region<PLACE> region : regions) {
-				final TermVariable tVar = mManagedScript.constructFreshTermVariable(region.toString(),
-						SmtSortUtils.getBoolSort(mManagedScript));
-				final IProgramVar pVar = ProgramVarUtils.constructGlobalProgramVarPair(tVar.getName(),
-						SmtSortUtils.getBoolSort(mManagedScript), mManagedScript, this);
-				mSymbolTable.add(pVar);
-				ghostVars.put(region, pVar);
-			}
-			return ghostVars;
+			final TermVariable tVar =
+					mManagedScript.constructFreshTermVariable(GHOST, SmtSortUtils.getIntSort(mManagedScript));
+			return ProgramVarUtils.constructGlobalProgramVarPair(tVar.getName(),
+					SmtSortUtils.getIntSort(mManagedScript), mManagedScript, this);
 		} finally {
 			mManagedScript.unlock(this);
 		}
 	}
 
 	/**
-	 * @return Map of place to the corresponding formula for each place in net
+	 * @return Map of places to the corresponding formula for each place
 	 */
-	private Map<PLACE, IPredicate> getFormulaMap() {
-		final Map<PLACE, IPredicate> formulaMap = new HashMap<>();
-		for (final PLACE place : mNet.getPlaces()) {
-			final var regions =
-					mGhostVariables.keySet().stream().filter(r -> r.contains(place)).collect(Collectors.toList());
-			if (regions.isEmpty()) {
-				formulaMap.put(place, mFactory.or());
-			} else {
-				final var placeFormula =
-						mFactory.and(regions.stream().map(this::computeRegionTerm).collect(Collectors.toList()));
-				formulaMap.put(place, placeFormula);
+	private Map<P, IPredicate> computePlaceAnnotations() {
+		final Map<P, IPredicate> formulaMap = new HashMap<>();
+		final var empireStates = mEmpire.getStates();
+		for (final P place : mProgram.getPlaces()) {
+			final var states = empireStates.stream().filter(s -> mEmpire.containsPlace(s, place)).toList();
+			assert noErrorPlaceInStates(place, states) : "Accepting place in state";
+
+			// As an optimization of the formula structure, we group the disjuncts by law.
+			// I.e., instead of generating a formula of the form (phi1 /\ g=q1) \/ (phi1 /\ g=q2) \/ (phi2 /\ g=q3),
+			// we instead generate the equivalent formula (phi1 /\ (g=q1 \/ g=q2)) \/ (phi2 /\ g=q3).
+			final Map<List<Term>, List<Term>> disjunctsByLaws = new HashMap<>(states.size());
+
+			for (final S state : states) {
+				final var placeRegion = mEmpire.getTerritory(state).getPlaceRegion(place);
+
+				final Term ghostEquation =
+						SmtUtils.binaryEquality(mScript, mGhostVariable.getTerm(), mStateTerms.get(state));
+				final var focusedLaws =
+						mLegalFocus.getFocusedLaws(state, placeRegion).stream().map(IPredicate::getFormula)
+								// Filter true literals, as they do not change the law. This allows for larger groups.
+								.filter(Predicate.not(SmtUtils::isTrueLiteral)).collect(Collectors.toList());
+
+				// Add the state (represented by the ghost equation) to the appropriate group.
+				disjunctsByLaws.computeIfAbsent(focusedLaws, x -> new ArrayList<>()).add(ghostEquation);
 			}
+
+			final var disjuncts = disjunctsByLaws.entrySet().stream().map(
+					// Combine conjunction over the laws (key of the map) and disjunction over the states (values).
+					e -> SmtUtils.and(mScript, SmtUtils.and(mScript, e.getKey()), SmtUtils.or(mScript, e.getValue())))
+					.toList();
+			formulaMap.put(place, mFactory.newPredicate(SmtUtils.or(mScript, disjuncts)));
 		}
 		return formulaMap;
+	}
+
+	private boolean noErrorPlaceInStates(final P place, final Collection<S> states) {
+		return !mProgram.isAccepting(place) || states.isEmpty();
+	}
+
+	/**
+	 * @return Map of ghost variable to its init assignment (which is the numeral of the init state)
+	 */
+	private Map<IProgramVar, Term> computeInitialGhostValuation() {
+		final var initState = DataStructureUtils.getOneAndOnly(mEmpire.getInitialStates(), "initial state");
+		return Map.of(mGhostVariable, mStateTerms.get(initState));
 	}
 
 	/**
 	 * @return Map of transition to the corresponding formula for each transition in net
 	 */
-	private Map<Transition<LETTER, PLACE>, GhostUpdate> getAssignmentMapping() {
-		final Map<Transition<LETTER, PLACE>, GhostUpdate> assignmentMapping = new HashMap<>();
-		for (final Transition<LETTER, PLACE> transition : mNet.getTransitions()) {
-			final var assignment = getTransitionAssignment(transition);
-			if (assignment != null) {
-				assignmentMapping.put(transition, assignment);
+	private Map<Transition<L, P>, GhostUpdate> computeGhostUpdateMapping() {
+		final var mapping = new HashMap<Transition<L, P>, GhostUpdate>();
+		for (final var transition : mProgram.getTransitions()) {
+			final var update = computeGhostUpdateForTransition(transition);
+			if (update != null) {
+				mapping.put(transition, update);
 			}
 		}
-		return assignmentMapping;
+		return mapping;
 	}
 
-	/**
-	 * @return Map of ghost variable to its init assignment for each ghost variable
-	 */
-	private Map<IProgramVar, Term> getGhostInitAssignment() {
-		final HashMap<IProgramVar, Term> initAssignments = new HashMap<>();
-		final Set<PLACE> initPlaces = mNet.getInitialPlaces();
-		Term initTerm;
-		for (final Region<PLACE> region : mEmpireAnnotation.getColony()) {
-			if (DataStructureUtils.haveEmptyIntersection(region.getPlaces(), initPlaces)) {
-				initTerm = mScript.term("false");
-			} else {
-				initTerm = mScript.term("true");
+	private GhostUpdate computeGhostUpdateForTransition(final Transition<L, P> transition) {
+		final var updatePairs = new ArrayList<Pair<S, S>>();
+
+		for (final S state : mEmpire.getStates()) {
+			final var edge = DataStructureUtils.getOnly(mEmpire.internalSuccessors(state, transition),
+					"More than one successor in automaton for a transition");
+			if (!edge.isPresent()) {
+				// The state does not have an edge for the given transition.
+				// This either means that the state's territory does not enable the transition,
+				// or that the edge would lead to a law "false".
+				// In either case, no ghost update is needed.
+				continue;
 			}
-			initAssignments.put(mGhostVariables.get(region), initTerm);
-		}
-		return initAssignments;
-	}
 
-	private Term computeTerritoryTerm(final Territory<PLACE, Region<PLACE>> territory) {
-		final Set<Term> positiveClauses =
-				mGhostVariables.keySet().stream().filter(r -> territory.getRegions().contains(r))
-						.map(r -> mGhostVariables.get(r).getTerm()).collect(Collectors.toSet());
-		final Set<Region<PLACE>> outRegions = mEmpireAnnotation.getOutlanderRegions(territory);
-		final Set<Term> negativeClauses = outRegions.stream()
-				.map(r -> SmtUtils.not(mScript, mGhostVariables.get(r).getTerm())).collect(Collectors.toSet());
-		return SmtUtils.and(mScript, DataStructureUtils.union(positiveClauses, negativeClauses));
-	}
-
-	private IPredicate getTerritoryFormula(final Territory<PLACE, Region<PLACE>> territory) {
-		return mTerritoryFormulaMap.computeIfAbsent(territory, t -> mFactory.newPredicate(computeTerritoryTerm(t)));
-	}
-
-	private IPredicate computeRegionTerm(final Region<PLACE> region) {
-		final var regionTerm = mFactory.newPredicate(mGhostVariables.get(region).getTerm());
-		final var territories = mEmpireAnnotation.getTerritories().stream().filter(t -> t.getRegions().contains(region))
-				.collect(Collectors.toList());
-		final var disjunction =
-				mFactory.or(territories.stream().map(this::getTerritoryFormula).collect(Collectors.toList()));
-		final var implications = mFactory.and(territories.stream().map(
-				t -> mFactory.or(mFactory.not(getTerritoryFormula(t)), mFactory.and(mEmpireAnnotation.getLawSet(t))))
-				.collect(Collectors.toList()));
-		return mFactory.and(regionTerm, disjunction, implications);
-	}
-
-	private Set<Territory<PLACE, Region<PLACE>>> getPlacesTerritories(final PLACE place) {
-		return mEmpireAnnotation.getTerritories().stream().filter(t -> t.getPlaces().contains(place))
-				.collect(Collectors.toSet());
-	}
-
-	IPredicate getTerritoryImplications() {
-		final Set<IPredicate> implicationSet = new HashSet<>();
-		for (final Territory<PLACE, Region<PLACE>> territory : mEmpireAnnotation.getTerritories()) {
-			final IPredicate territoryImplication = mFactory.or(mFactory.not(getTerritoryFormula(territory)),
-					mFactory.and(mEmpireAnnotation.getLawSet(territory)));
-			implicationSet.add(territoryImplication);
-		}
-		return mFactory.and(implicationSet);
-	}
-
-	IPredicate getPlacesGhostVariableFormula(final PLACE place) {
-		final Set<Term> terms = new HashSet<>();
-		for (final Entry<Region<PLACE>, IProgramVar> entry : mGhostVariables.entrySet()) {
-			if (entry.getKey().contains(place)) {
-				terms.add(entry.getValue().getTerm());
+			final S successor = edge.orElseThrow().getSucc();
+			if (mStateTerms.get(state).equals(mStateTerms.get(successor))) {
+				// The edge is a self-loop. Thus, it does not have to be handled explicitly in the ghost update.
+				// Instead, self-loops are handled in the default case of the ghost update's case distinction.
+				//
+				// We compare state terms (not states directly) to also catch the case of updates to a successor that is
+				// not distinguished from the current state.
+				continue;
 			}
-		}
-		return mFactory.newPredicate(SmtUtils.and(mScript, terms));
-	}
 
-	IPredicate getPlacesTerritoryFormula(final PLACE place) {
-		final Set<Territory<PLACE, Region<PLACE>>> placesTerritories = getPlacesTerritories(place);
-		final Set<IPredicate> placesTerritoriesFormula =
-				placesTerritories.stream().map(t -> getTerritoryFormula(t)).collect(Collectors.toSet());
-		return mFactory.or(placesTerritoriesFormula);
-	}
-
-	private GhostUpdate getTransitionAssignment(final Transition<LETTER, PLACE> transition) {
-		final Map<IProgramVar, Term> assignments = new HashMap<>();
-
-		final Set<PLACE> predecessors = transition.getPredecessors();
-		final Set<Region<PLACE>> predecessorRegions = mEmpireAnnotation.getColony().stream()
-				.filter(r -> DataStructureUtils.haveNonEmptyIntersection(r.getPlaces(), predecessors))
-				.collect(Collectors.toSet());
-
-		final Set<PLACE> successors = transition.getSuccessors();
-		final Set<Region<PLACE>> successorRegions = mEmpireAnnotation.getColony().stream()
-				.filter(r -> DataStructureUtils.haveNonEmptyIntersection(r.getPlaces(), successors))
-				.collect(Collectors.toSet());
-
-		// Remove regions from both sets which are both predecessors and successors
-		final Set<Region<PLACE>> intersectingRegions =
-				DataStructureUtils.intersection(predecessorRegions, successorRegions);
-		predecessorRegions.removeAll(intersectingRegions);
-		successorRegions.removeAll(intersectingRegions);
-
-		final var falseTerm = mScript.term(SMTLIBConstants.FALSE);
-		for (final Region<PLACE> region : predecessorRegions) {
-			assignments.put(mGhostVariables.get(region), falseTerm);
+			updatePairs.add(new Pair<>(state, successor));
 		}
 
-		final var trueTerm = mScript.term(SMTLIBConstants.TRUE);
-		for (final Region<PLACE> region : successorRegions) {
-			assignments.put(mGhostVariables.get(region), trueTerm);
-		}
-
-		if (assignments.isEmpty()) {
+		if (updatePairs.isEmpty()) {
+			// Avoid returning a trivial ghost update.
 			return null;
 		}
-		return new GhostUpdate(assignments);
+
+		final Term caseDistinction = getGhostUpdateTerm(updatePairs);
+		return new GhostUpdate(Map.of(mGhostVariable, caseDistinction));
 	}
 
-	public OwickiGriesAnnotation<Transition<LETTER, PLACE>, PLACE, Marking<PLACE>> getAnnotation() {
+	private Term getGhostUpdateTerm(final List<Pair<S, S>> statePairs) {
+		Term updateTerm = mGhostVariable.getTerm();
+		for (final var pair : statePairs) {
+			final var pred = pair.getFirst();
+			final var succ = pair.getSecond();
+			final var equalsTerm =
+					mScript.term(SMTLIBConstants.EQUALS, mGhostVariable.getTerm(), mStateTerms.get(pred));
+			updateTerm = mScript.term(SMTLIBConstants.ITE, equalsTerm, mStateTerms.get(succ), updateTerm);
+		}
+		return updateTerm;
+	}
+
+	private Map<S, Term> getStateTerms(final Map<S, Integer> stateIndistinction) {
+		final var stateTerms = new LinkedHashMap<S, Term>();
+		for (final S state : mEmpire.getStates()) {
+			stateTerms.put(state, mScript.numeral(String.valueOf(stateIndistinction.get(state))));
+		}
+		return stateTerms;
+	}
+
+	public OwickiGriesAnnotation<Transition<L, P>, P, Marking<P>> getAnnotation() {
 		return mOwickiGriesAnnotation;
 	}
 }
